--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-	"version": "0.0.1",
+	"version": "1.0.0",
 	"name": "simple-typewriter",
+	"description": "A simple, lightweight and highly customizable typewriter effect for react",
 	"module": "index.ts",
 	"type": "module",
-	"main": "dist/index.js",  
-	"types": "dist/types/index.d.ts",
+	"main": "dist/index.js",
+	"keywords": [
+		"typewriter",
+		"react-typewriter",
+		"simple-typewriter",
+		"react"
+	],
+	"author": "uzzam_altaf",
+	"license": "MIT",
 	"devDependencies": {
 		"@types/bun": "latest"
 	},
@@ -14,5 +22,13 @@
 		"next": "^15.0.3",
 		"react": "^18.3.1"
 	},
-	"dependencies": {}
+	"dependencies": {},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/uzzam-web-dev/simple-typewriter/"
+	},
+	"bugs": {
+		"url": "https://github.com/uzzam-web-dev/simple-typewriter/issues"
+	},
+	"homepage": "https://github.com/uzzam-web-dev/simple-typewriter/"
 }
